test/SemanticAnalysis/LifetimeMethods/InvalidStaticnessSizeOf.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__sizeof' should be static
	size_t __sizeof() noexcept {
		return 1;
	}
}

// CHECK: 1 error generated.
